math-core/tests/snapshots/conversion_test__mathit_of_max.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
<math>
    <mrow>
        <mi>𝑎𝑏</mi>
        <mo lspace="0.1667em" rspace="0.1667em">max</mo>
        <mi>𝛼𝛽</mi>
    </mrow>
</math>
