math-core/tests/snapshots/conversion_test__mathit_of_operatorname.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{a\\operatorname{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mo lspace="0.1667em" rspace="0.1667em">bc</mo>
        <mi>𝑑</mi>
    </mrow>
</math>
