math-core/tests/snapshots/conversion_test__mathit_of_operatorname_single.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{\\operatorname{a}}"
---
<math>
    <mo lspace="0" rspace="0">a</mo>
</math>
