math-core/tests/snapshots/conversion_test__mathrm_multiletter.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm{abc}"
---
<math>
    <mpadded><mi>abc</mi></mpadded>
</math>
