math-core/tests/snapshots/conversion_test__mathrm_nested.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{\\mathrm{a}b}"
---
<math>
    <mrow>
        <mpadded><mi mathvariant="normal">a</mi></mpadded>
        <mi>𝑏</mi>
    </mrow>
</math>
