math-core/tests/snapshots/conversion_test__mathrm_nested2.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm{\\mathit{a}b}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi mathvariant="normal">b</mi>
    </mrow>
</math>
