math-core/tests/snapshots/conversion_test__mathrm_nested3.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
<math>
    <mrow>
        <mi>ab</mi>
        <mi>𝑐𝑑</mi>
        <mi>ef</mi>
    </mrow>
</math>
