math-core/tests/snapshots/conversion_test__mathrm_nested4.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{\\mathrm{a}}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
