math-core/tests/snapshots/conversion_test__mathrm_no_brackets.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm x"
---
<math>
    <mi mathvariant="normal">x</mi>
</math>
