math-core/tests/snapshots/conversion_test__mathrm_with_sin.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm{x\\sin}"
---
<math>
    <mrow>
        <mpadded><mi mathvariant="normal">x</mi></mpadded>
        <mo lspace="0.1667em" rspace="0">sin</mo>
    </mrow>
</math>
