math-core/tests/snapshots/conversion_test__mathrm_with_superscript.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathrm{x}^2"
---
<math>
    <msup>
        <mpadded><mi mathvariant="normal">x</mi></mpadded>
        <mn>2</mn>
    </msup>
</math>
